fix: My Books page overflow

--- a/static/css/components/mybooks-details.less
+++ b/static/css/components/mybooks-details.less
@@ -20,11 +20,13 @@
 .breadcrumb-wrapper {
   display: flex;
   flex-wrap: wrap;
+  min-width: 0;
   white-space: nowrap;
 }
 
 .social-wrapper {
   display: flex;
+  min-width: 0;
 }
 
 .follow-row {
